objects/CZConvergeCharterConfiguration__mdt.object
<CustomObject>
    <description>It contains charter config for Converge(Elavon) Funding</description>
    <fields>
        <fullName>BrandCode__c</fullName>
        <description>Brand Code</description>
        <label>Brand Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MerchantId__c</fullName>
        <description>Merchant Id</description>
        <label>Merchant Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SslPin__c</fullName>
        <description>SSL Pin</description>
        <label>Ssl Pin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <description>User Id</description>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Converge Charter Configuration</label>
    <pluralLabel>Converge Charter Configurations</pluralLabel>
</CustomObject>